# raytracer

./: .gitignore  README.md  raytracer.cabal
src/: Camera.hs  Image.hs  Main.hs  PPM.hs  Ray.hs  Render.hs  Vec3.hs
