cabal-version:      3.12
name:               raytracer
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable raytracer
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Camera,
        Image,
        PPM,
        Ray,
        Render,
        Vec3
    build-depends:
        base ^>=4.18.2.0,
        containers,
        mtl,
        MonadRandom,
        random,
        text,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        DuplicateRecordFields,
        OverloadedRecordDot,
        OverloadedStrings,

